--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,8 @@
 .card:hover .progress-bar {
     width: 100%;
 }
+@layer utilities {
+    .title-text {
+        @apply animate-text bg-gradient-to-r from-cyan-500 via-purple-500 to-cyan-400 bg-clip-text text-transparent font-black;
+    }
+}
