--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@
     left: 0;
     width: 0%;
     height: 4px;
-    background-color: red;
+    background-color: blue;
     transition: width 0.5s ease-in-out;
 }
 
