navbar problem solved

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@
         @apply inline-flex items-center h-12 px-6 mb-3 font-medium text-white transition duration-200 rounded shadow-md  md:mb-0 bg-blue-400 hover:bg-blue-700;
     }
 }
+.active {
+    @apply font-bold tracking-wide text-red-500 transition-colors duration-200 hover:text-blue-400;
+}
+
+.default {
+    @apply font-bold tracking-wide text-indigo-700 transition-colors duration-200 hover:text-indigo-500;
+}
 
 .hover-stroke {
     position: relative;
@@ -36,13 +43,6 @@
     text-stroke-color: white;
 }
 
-.active {
-    @apply font-medium tracking-wide text-blue-700 transition-colors duration-200 hover:text-blue-400;
-}
-
-.default {
-    @apply font-medium tracking-wide text-red-600 transition-colors duration-200 hover:text-blue-400;
-}
 .card {
     position: relative;
     overflow: hidden;
