--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 
 /* Tailwind CSS custom Style and Using this style whatever i want */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap');
+
+* {
+    font-family: 'Open Sans', sans-serif;
+}
 .my-container {
     @apply px-3 py-2 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-4 lg:px-4 lg:py-5;
 }
